@@ -17,52 +17,75 @@
 # Test that bazel can be compiled out of the distribution artifact.
 #
 
-set -u
-DISTFILE=$(rlocation io_bazel/${1#./})
-EMBEDDED_JDK=$(rlocation io_bazel/${2#./})
-shift 1
+set -euo pipefail
+# --- begin runfiles.bash initialization ---
+if [[ ! -d "${RUNFILES_DIR:-/dev/null}" && ! -f "${RUNFILES_MANIFEST_FILE:-/dev/null}" ]]; then
+    if [[ -f "$0.runfiles_manifest" ]]; then
+      export RUNFILES_MANIFEST_FILE="$0.runfiles_manifest"
+    elif [[ -f "$0.runfiles/MANIFEST" ]]; then
+      export RUNFILES_MANIFEST_FILE="$0.runfiles/MANIFEST"
+    elif [[ -f "$0.runfiles/bazel_tools/tools/bash/runfiles/runfiles.bash" ]]; then
+      export RUNFILES_DIR="$0.runfiles"
+    fi
+fi
+if [[ -f "${RUNFILES_DIR:-/dev/null}/bazel_tools/tools/bash/runfiles/runfiles.bash" ]]; then
+  source "${RUNFILES_DIR}/bazel_tools/tools/bash/runfiles/runfiles.bash"
+elif [[ -f "${RUNFILES_MANIFEST_FILE:-/dev/null}" ]]; then
+  source "$(grep -m1 "^bazel_tools/tools/bash/runfiles/runfiles.bash " \
+            "$RUNFILES_MANIFEST_FILE" | cut -d ' ' -f 2-)"
+else
+  echo >&2 "ERROR: cannot find @bazel_tools//tools/bash/runfiles:runfiles.bash"
+  exit 1
+fi
+# --- end runfiles.bash initialization ---
 
-# Load the test setup defined in the parent directory
-source $(rlocation io_bazel/src/test/shell/integration_test_setup.sh) \
+source "$(rlocation "io_bazel/src/test/shell/integration_test_setup.sh")" \
   || { echo "integration_test_setup.sh not found!" >&2; exit 1; }
 
-function _log_progress() {
-  if is_windows; then
-    log_info "test_bootstrap: $*"
-  fi
-}
+# `uname` returns the current platform, e.g "MSYS_NT-10.0" or "Linux".
+# `tr` converts all upper case letters to lower case.
+# `case` matches the result if the `uname | tr` expression to string prefixes
+# that use the same wildcards as names do in Bash, i.e. "msys*" matches strings
+# starting with "msys", and "*" matches everything (it's the default case).
+case "$(uname -s | tr [:upper:] [:lower:])" in
+msys*)
+  # As of 2019-01-15, Bazel on Windows only supports MSYS Bash.
+  declare -r is_windows=true
+  ;;
+*)
+  declare -r is_windows=false
+  ;;
+esac
+
+if [[ -n "${1:-}" ]]; then
+  declare -r DISTFILE=$(rlocation io_bazel/${1#./})
+else
+  fail "missing argument for DISTFILE"
+fi
+
+if [[ -n "${2:-}" ]]; then
+  declare -r EMBEDDED_JDK=$(rlocation io_bazel/${2#./})
+else
+  declare -r EMBEDDED_JDK=""
+fi
 
 function test_bootstrap()  {
-    _log_progress "start"
-    local olddir=$(pwd)
-    WRKDIR=$(mktemp -d ${TEST_TMPDIR}/bazelbootstrap.XXXXXXXX)
-    mkdir -p "${WRKDIR}" || fail "Could not create workdir"
-    trap "rm -rf \"$WRKDIR\"" EXIT
-    cd "${WRKDIR}" || fail "Could not change to work directory"
+    cd "$(mktemp -d ${TEST_TMPDIR}/bazelbootstrap.XXXXXXXX)"
     export SOURCE_DATE_EPOCH=1501234567
-    _log_progress "unzip"
     unzip -q "${DISTFILE}"
     if [[ $EMBEDDED_JDK == *.tar.gz ]]; then
       tar xf $EMBEDDED_JDK
     elif [[ $EMBEDDED_JDK == *.zip ]]; then
       unzip -q $EMBEDDED_JDK
     fi
-    JAVABASE=$(echo zulu*)
+    JAVABASE=$(echo reduced*)
 
-    _log_progress "bootstrap"
-    env EXTRA_BAZEL_ARGS="--curses=no --strategy=Javac=standalone" ./compile.sh \
+    env EXTRA_BAZEL_ARGS="--host_javabase=@local_jdk//:jdk" ./compile.sh \
         || fail "Expected to be able to bootstrap bazel"
-    _log_progress "run"
     ./output/bazel \
       --server_javabase=$JAVABASE --host_jvm_args=--add-opens=java.base/java.nio=ALL-UNNAMED \
-      version > "${TEST_log}" || fail "Generated bazel not working"
-    ./output/bazel \
-      --server_javabase=$JAVABASE --host_jvm_args=--add-opens=java.base/java.nio=ALL-UNNAMED \
-      shutdown
-    _log_progress "assert"
+      version &> "${TEST_log}" || fail "Generated bazel not working"
     expect_log "${SOURCE_DATE_EPOCH}"
-    cd "${olddir}"
-    _log_progress "done"
 }
 
 run_suite "bootstrap test"
